DIST_SUBDIRS = GaimDomain

if DARWIN
SUBDIRS = GaimDomain

endif

if LINUX
SUBDIRS = GaimDomain

endif

if WINDOWS
SUBDIRS = GaimDomain

endif

EXTRA_DIST = 

clean-local:
	rm -rf $(COMMON_CLEAN_FILES)

distclean-local:
	rm -rf $(COMMON_DISTCLEAN_FILES)

maintainer-clean-local:
	rm -rf $(COMMON_MAINTAINER_CLEAN_FILES)

